Fixed Project One Typos

--- a/_posts/2015-07-20-Riftodds.md
+++ b/_posts/2015-07-20-Riftodds.md
@@ -1,12 +1,12 @@
 ---
 layout: post
-title: Project 1 - RiftOdds. So you can rage at your teammates with some statististical certainty.
+title: Project 1 - RiftOdds. So you can rage at your teammates with some statistical certainty.
 subtitle: Riot Games API Integration
 ---
 
 #[RiftOdds Repo](https://github.com/organicrails/riftodds)
 
-I've always wanted to know how to integrate a simple API to a rails app. So when I found out that Riot has a develpers' portal, I looked into it and made a simple app. 
+I've always wanted to know how to integrate a simple API to a rails app. So when I found out that Riot has a developers' portal, I looked into it and made a simple app. 
 
 
 For those of who've never played League of Legends, here is a quick run-down. Five players (aka summoner) on a team. Each summoner chooses a Champion. Two teams are matched against each other. First team to completely obliterate the other team wins. 
@@ -40,7 +40,7 @@ Now, let's begin by thinking what we need to accomplish here. First, we need to 
 rails g model Players p1:string p2:string
 {% endhighlight %}
 
-But wait, don't we need the champions names too? It appears that I forgot to add that field in our Players model. No fear, Let's just create a simple migration to accomdate my mistake. Both Champions will have name type string. 
+But wait, don't we need the champions names too? It appears that I forgot to add that field in our Players model. No fear, Let's just create a simple migration to accommodate my mistake. Both Champions will have name type string. 
 
 {% highlight ruby %}
 rails g migration add_champions_to_players c1:string c2:string
@@ -172,20 +172,20 @@ And don't forget to define the corresponding view pages too
 
 {% endhighlight %}
 
-Awesome. Head to the index page, input something, and take a look at the show page. It doesn't look like much, but this is all the information we need to play around with Riot API and get what we ultimately want - the winrate of each summoner and his respective champion.
+Awesome. Head to the index page, input something, and take a look at the show page. It doesn't look like much, but this is all the information we need to play around with Riot API and get what we ultimately want - the win-rate of each summoner and his respective champion.
 
 ### Understanding Riot API 
 
 Finally, the good parts. If you forget the developer link for whatever, [here it is again](https://developer.riotgames.com/). First thing first, let's have a basic understanding of the API documentation first. One thing to keep in mind is the API rate limits. In this API case, it is at most 10 requests every 10 seconds, up to 500 requests every 10 minutes. This simply means that some apps that we might want to create with the Riot API may not be achievable because of the rate limits. 
 
-Looking at the [getting started page](https://developer.riotgames.com/docs/getting-started), it appears that all the API calls are within the following format: a base URL _https://na.api.pvp.net/_ , follow by the targetted API method call, follow by your API key. (Ex: https://na.api.pvp.net/api/lol/na/v1.4/summoner/by-name/RiotSchmick?api_key=SOME_KEY)
+Looking at the [getting started page](https://developer.riotgames.com/docs/getting-started), it appears that all the API calls are within the following format: a base URL _https://na.api.pvp.net/_ , follow by the targeted API method call, follow by your API key. (Ex: https://na.api.pvp.net/api/lol/na/v1.4/summoner/by-name/RiotSchmick?api_key=SOME_KEY)
 
 Because there are no ruby gems for the Riot API, we need to manually integrate the URL call whenever we want to call upon the Riot API. 
 
 Now that we understand the basics, let's get started.
 
 ### Configuring Riot API
-Before we do anything with the Riot API, let's keep your API key save. To acheive this in Rails, I typically use the [Figaro Gem](https://github.com/laserlemon/figaro). Figaro will allow you to securely store your API keys (or any other sensitive materials) and remove them from your _.gitingore_ if you choose to push to Git. Let's configure Figaro now.
+Before we do anything with the Riot API, let's keep your API key save. To achieve this in Rails, I typically use the [Figaro Gem](https://github.com/laserlemon/figaro). Figaro will allow you to securely store your API keys (or any other sensitive materials) and remove them from your _.gitingore_ if you choose to push to Git. Let's configure Figaro now.
 
 **_Gemfile_**
 {% highlight ruby %}
@@ -207,15 +207,15 @@ and now you can use the following syntax anytime you need to call upon your riot
 ENV["riot_api_key"]
 {% endhighlight%}
 
-**If you enocunter any sort of error from this point on, try restarting the servers first. For some reason I think you need to restart the server whenever the riotapi.rb file is altered in any way. If that does not fix it, feel free to leave a comment below!**
+**If you encounter any sort of error from this point on, try restarting the servers first. For some reason I think you need to restart the server whenever the riotapi.rb file is altered in any way. If that does not fix it, feel free to leave a comment below!**
 
 
 ### Implementing Riot API
 Before this application, I have no idea how to implement an API at all. With that said, here are some of the most helpful resources on StackOverflow that I read when I attempted the integration. [How to Organize External API Calls](http://stackoverflow.com/questions/30677010/organize-external-api-calls-in-rails-4-module-or-class) and [How to Use External API](http://stackoverflow.com/questions/16900368/how-to-use-external-apis-in-rails) and [Another One on How to Use External API](http://stackoverflow.com/questions/31414478/how-to-use-external-api-with-rails)
 
-After some research, it appears that API call without a gem belongs to the _lib/_ directory, as the _lib/_ directory is use to store code that could stand on its own (like a gem) and does not belong to the Model, the View, or the Controller. The Riot API fits this description becasue there could potentially be a gem for it, but there isn't one. API call also does not relate to any of the MVC, so we'll put it in gem. 
+After some research, it appears that API call without a gem belongs to the _lib/_ directory, as the _lib/_ directory is use to store code that could stand on its own (like a gem) and does not belong to the Model, the View, or the Controller. The Riot API fits this description because there could potentially be a gem for it, but there isn't one. API call also does not relate to any of the MVC, so we'll put it in gem. 
 
-Before we can call the API from Riot's server, we need some way to establish the connection. For this purpse, we'll use the [HTTParty Gem](https://github.com/jnunemaker/httparty). This gem allows the appplication to establish a connection with a third-party API, and parse it into [JSON format](http://json.org/example) that we can mess around with. 
+Before we can call the API from Riot's server, we need some way to establish the connection. For this purpose, we'll use the [HTTParty Gem](https://github.com/jnunemaker/httparty). This gem allows the application to establish a connection with a third-party API, and parse it into [JSON format](http://json.org/example) that we can mess around with. 
 
 Include the HTTParty Gem in your GEMFILE and `bundle install`
 {% highlight ruby %}
@@ -226,7 +226,7 @@ Now, let's create a _riotapi.rb_ within the _lib/_ directory.
 
 In order to use the HTTParty gem, we must _require_ it within the file. If you're wondering why it's not _include_, [here is a great response to require vs include](http://stackoverflow.com/questions/318144/what-is-the-difference-between-include-and-require-in-ruby). 
 
-We then simply create a class. Let's call it RiotApi. Since we are dealing with the Riot API call within this file, we sure need to incorporate the API URL somehow. Following the breakdown we mentioned earlier, we can establish two variables, one for the BASE_URL an one for the API_KEY and assign them the appropirate values. We then need to define a method to parse the information we get into JSON format. Using [this post as a guide](http://stackoverflow.com/questions/18320642/parsing-json-in-controller-w-httparty), we can, for now, derive the following _RiotApi_ class
+We then simply create a class. Let's call it RiotApi. Since we are dealing with the Riot API call within this file, we sure need to incorporate the API URL somehow. Following the breakdown we mentioned earlier, we can establish two variables, one for the BASE_URL an one for the API_KEY and assign them the appropriate values. We then need to define a method to parse the information we get into JSON format. Using [this post as a guide](http://stackoverflow.com/questions/18320642/parsing-json-in-controller-w-httparty), we can, for now, derive the following _RiotApi_ class
 
 **_lib/riotapi.rb_**
 {% highlight ruby %}
@@ -248,7 +248,7 @@ _parse_json_ method will simply parse any url given into JSON format.
 
 ### Gathering Summoner Information
 
-Now that we can parse any url into JSON format, we can start targetting the information that we actually need. Remember, we need, to some extent, information on the summoners and their respective champions. Looking through the API Doc, we can see that stats-v.13 might provide us with that we need. Under /api/lol/{region}/v1.3/stats/by-summoner/{summonerId}/ranked, we can see that it does return a _champion_ value, and within the _champion_ value is a list of stats for that champion. In that list, there exists _totalSessionsWon_, _totalSessionsPlayed_, and _totalSessionsLost_. Which is exactly what is required to calculate the win-rate. 
+Now that we can parse any URL into JSON format, we can start targeting the information that we actually need. Remember, we need, to some extent, information on the summoners and their respective champions. Looking through the API Doc, we can see that stats-v.13 might provide us with that we need. Under /api/lol/{region}/v1.3/stats/by-summoner/{summonerId}/ranked, we can see that it does return a _champion_ value, and within the _champion_ value is a list of stats for that champion. In that list, there exists _totalSessionsWon_, _totalSessionsPlayed_, and _totalSessionsLost_. Which is exactly what is required to calculate the win-rate. 
 
 However, upon closer inspection, it appears that the API call requires a _region_ and a _summonerId_. This makes sense, As the statistics might be separated by region, and each player's stat is recorded individually under their own unique summonerId. For our intents and purposes, we can assume that all region simply points to **North America**, or simply **na** in this case. Therefore, our first issue now is to figure out how to obtain the _summoner id_ when given a summoner name. 
 
@@ -334,7 +334,7 @@ Now when the show page is refreshed, this should be what be displayed
 
 **uzi** 40671078
 
-Sweet, we're almost done with obtaining the Summoner portion of the app. One last thing. Notice how the API only accepts lower-cased summoner's name as a key ("uzi" as opposed to "Uzi"), it would be a headache if a user inputs Uppercase name. Let's do a quick _befores_save_ method in our model that will downcase all player names before saving them to the Player database. 
+Sweet, we're almost done with obtaining the Summoner portion of the app. One last thing. Notice how the API only accepts lower-cased summoner's name as a key ("uzi" as opposed to "Uzi"), it would be a headache if a user inputs Uppercase name. Let's do a quick _befores_save_ method in our model that will down-case all player names before saving them to the Player database. 
 
 **_/app/models/player.rb_**
 {% highlight ruby %}
@@ -615,7 +615,7 @@ class Player < ActiveRecord::Base
     # some code...
   end
 
-  #modifies champion name before saving to the databse
+  #modifies champion name before saving to the database
   def mod_champ_save
     #split the word first. capitalize each individual word. Join them back with no spaces in between. 
     self.c1 = c1.split.map(&:capitalize).join('')
@@ -694,7 +694,7 @@ class Player < ActiveRecord::Base
     # some code...
   end
 
-  #modifies champion name before saving to the databse
+  #modifies champion name before saving to the database
   def mod_champ_save
     # some code...
   end
@@ -707,13 +707,13 @@ Initially, we declare a `champ_ids` variable. In that variable, we call _summone
 
 Next, since we already have the champion name, all we need to do is get the champion ID. `desired_champ_id` stores that information. We also set the initial winrate to 0.0.
 
-Now, the winrate can only exist if the champion we are looking for (`desired_champ_id`) is within the array of `champion_ids`. The if statement will check that for us. If the champion is not within the array of `champion_ids`, we will simply grant them, and assume, a lenient 50% winrate (though I believe the actual statisics would point to around 30% for all new champions played upon release). 
+Now, the winrate can only exist if the champion we are looking for (`desired_champ_id`) is within the array of `champion_ids`. The if statement will check that for us. If the champion is not within the array of `champion_ids`, we will simply grant them, and assume, a lenient 50% winrate (though I believe the actual statistics would point to around 30% for all new champions played upon release). 
 
 If the champion is indeed within the array, we need a way to find it within the actual _return_summoner_champion_list_. Now, if you remember, _return_summoner_champion_list_ seems to return the list of champions in a random fashion (or not, I just didn't quite figure it out). This means that either we can loop through the list again trying to match `desired_champ_id` to one of the element within the array, or we can use the code we already have. 
 
 When I double checked, it appears that the array of `champion_ids` do preserve the index location of each IDs when compared to the list taken from _return_summoner_champion_list_. This means that if we can find a way to locate the index, we can get the information we want immediately without all the hassles of looping and searching. 
 
-After looking quite a few SO posts, I stumble upon [this post](http://stackoverflow.com/questions/6242311/quickly-get-index-of-array-element-in-ruby). Following the solution, I declared a `hash = Hash[champion_ids.map.with_index.to_a]` and saved the desired champion index with `champ_array_location = hash[desired_champ_id]`. This varialbe stores the index location of the champion we are looking for. 
+After looking quite a few SO posts, I stumble upon [this post](http://stackoverflow.com/questions/6242311/quickly-get-index-of-array-element-in-ruby). Following the solution, I declared a `hash = Hash[champion_ids.map.with_index.to_a]` and saved the desired champion index with `champ_array_location = hash[desired_champ_id]`. This variable stores the index location of the champion we are looking for. 
 
 All I have to do then is to simply gather the information and do a simple calculation. `player_stat = return_summoner_champion_list(player_name)[champ_array_location]["stats"]` returns the summoner statistics with respect to the champion we are interested in. `total_played = player_stat["totalSessionsPlayed"]` and `total_won = player_stat["totalSessionsWon"]` provided the values we need to calculate the winrate. `winrate = (total_won.to_f / total_played.to_f)`
 calculates the actual winrate (need to cast it to a floating value), and finally multiply `winrate` by 100 to get the percentage value. 
@@ -822,7 +822,7 @@ And while we're at it, why not add the option for the users to search again afte
 
 And that's it!
 
-Thansk for sticking with me till the end. I hope you've enjoyed it and, most importantly, learned something along the way.
+Thanks for sticking with me till the end. I hope you've enjoyed it and, most importantly, learned something along the way.
 
 If you have any comments or questions, please don't hesitate to post them below. 
 
@@ -830,9 +830,9 @@ If you have any comments or questions, please don't hesitate to post them below.
 ### Some Self Reflection
 When I read back on what I've written, I honestly could not believe that I wrote an entire tutorial. In regards to the application itself, there were some tweaks that I thought about adding, but simply didn't. 
 
-First would probably be some CSS styling. Second would probably be writing some tests. And third would be some error checking. I did not add in any of them listed above because when I first started, I really wanted to focus only on rails and the topics at hand. Many times when I go through other tutorials, I tend to skip the styling and front-end stuff because I didn't mind not having them. Testing and error checkings were on the list, but I ultimately did not implement them. I am simply not good enough with them yet. I am in the process of learning more about testing, but until I become familiar enough (at least to my standards), I think showing them is a diservice to the readers.
+First would probably be some CSS styling. Second would probably be writing some tests. And third would be some error checking. I did not add in any of them listed above because when I first started, I really wanted to focus only on rails and the topics at hand. Many times when I go through other tutorials, I tend to skip the styling and front-end stuff because I didn't mind not having them. Testing and error checking were on the list, but I ultimately did not implement them. I am simply not good enough with them yet. I am in the process of learning more about testing, but until I become familiar enough (at least to my standards), I think showing them is a disservice to the readers.
 
-With that said, there are probably bugs and errors within the app that I did not encounter. If, given the example input fields (uni, doublelift, janna, jinx), you enocunter some sort of error, please let me know so I can work them out and give an update. If you encounter errors that occur from other fields of input, please let me know too! But the foundation of the app should be working. Afterall, the point of this tutorial is to work with the Riot API. 
+With that said, there are probably bugs and errors within the app that I did not encounter. If, given the example input fields (uni, doublelift, janna, jinx), you encounter some sort of error, please let me know so I can work them out and give an update. If you encounter errors that occur from other fields of input, please let me know too! But the foundation of the app should be working. After all, the point of this tutorial is to work with the Riot API. 
 
 See you next time.
 
