Chnaged title to Welcome

--- a/_posts/2015-07-19-welcome.md
+++ b/_posts/2015-07-19-welcome.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Welcome to Organic Rails. Here is to All the Learners Out There Who Simply Would Not Give Up. 
+title: Hi. Welcome to Organic Rails. 
 ---
 
 **TLDR: I am not a pro, so please challenge me on everything. My code is wrong somewhere? Correct me. Got another way to implement a feature? Correct me. I am doing something completely wrong? Correct me. Help me help the rails community to have a better understand of Rails. Thanks!**
