fixed typo in welcome

--- a/_posts/2015-07-19-welcome.md
+++ b/_posts/2015-07-19-welcome.md
@@ -3,7 +3,7 @@ layout: post
 title: Hi. Welcome to Organic Rails. 
 ---
 
-**TLDR: I am not a pro, so please challenge me on everything. My code is wrong somewhere? Correct me. Got another way to implement a feature? Correct me. I am doing something completely wrong? Correct me. Help me help the rails community to have a better understand of Rails. Thanks!**
+**TLDR: I am not a pro, so please challenge me on everything. My code is wrong somewhere? Correct me. Got another way to implement a feature? Correct me. I am doing something completely wrong? Correct me. Help me help the rails community to have a better understanding of Rails. Thanks!**
 
 I started learning Ruby on Rails exactly one year ago, and what a journey has it been. When I first started learning Rails, I wasn't exactly sure what I wanted to do with it. All I knew was that I wanted to simply **make something**, regardless of what the end product end. I knew that I got into Computer Science not because I enjoy the theories and maths behind them, (although they are truly fascinating) but because I have always enjoyed the power of creation. 
 
