--- a/_posts/2015-07-19-welcome.md
+++ b/_posts/2015-07-19-welcome.md
@@ -42,6 +42,8 @@ A free, once a week ruby email that covers topics ranging from gem discovery to 
 
 Got a problem or just want to talk? The Reddit Rails community is incredibly patient and awesome. They will answer most of your questions/concerns. 
 
+[DevWalks](http://www.devwalks.com/)
+Last but not least, DevWalks is a seriously awesome resource if you are thinking of building another full-scale application like Hartl's Twitter clone. In this series, you will build an instagram clone along with the necesserily testing specs. If you have any questions, the creator of this series is pretty active on the rails subreddit, so be sure to check it out!
 
 
 
