--- a/_posts/2015-07-20-Riftodds.md
+++ b/_posts/2015-07-20-Riftodds.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Project 1 - RiftOdds. So you can rage at your teammates with some statistical certainty.
-subtitle: Riot Games API Integration
+subtitle: Riot Games API Integration w/ Ruby 2.1.3 and Rails 4.2.3
 ---
 
 #[RiftOdds Repo](https://github.com/organicrails/riftodds)
