Fixed a few sentences

--- a/_posts/2015-07-20-Riftodds.md
+++ b/_posts/2015-07-20-Riftodds.md
@@ -830,7 +830,7 @@ If you have any comments or questions, please don't hesitate to post them below.
 ### Some Self Reflection
 When I read back on what I've written, I honestly could not believe that I wrote an entire tutorial. In regards to the application itself, there were some tweaks that I thought about adding, but simply didn't. 
 
-First would probably be some CSS styling. Second would probably be writing some tests. And third would be some error checking. I did not add in any of them listed above because when I first started, I really wanted to focus only on rails and the topics at hand. Many times when I go through other tutorials, I tend to skip the styling and front-end stuff because I didn't mind not having them. Testing and error checking were on the list, but I ultimately did not implement them. I am simply not good enough with them yet. I am in the process of learning more about testing, but until I become familiar enough (at least to my standards), I think showing them is a disservice to the readers.
+First would probably be some CSS styling. Second would probably be writing some tests. And third would be some error checking. I did not add in any of them listed above because when I first started, I really wanted to focus only on rails and the topics at hand. Many times when I go through other tutorials, I tend to skip the styling and front-end stuff because I didn't mind not having them for this app.
 
 With that said, there are probably bugs and errors within the app that I did not encounter. If, given the example input fields (uni, doublelift, janna, jinx), you encounter some sort of error, please let me know so I can work them out and give an update. If you encounter errors that occur from other fields of input, please let me know too! But the foundation of the app should be working. After all, the point of this tutorial is to work with the Riot API. 
 
