Update Post BearHug

--- a/_posts/2015-09-07-Bearhug.md
+++ b/_posts/2015-09-07-Bearhug.md
@@ -3,6 +3,7 @@ layout: post
 title: Project 4 - BearHugs. Since We All Need Somebody To Lean On, Let's Just Hire Some Cuddly Bears.
 subtitle: Stripe Payment Integration w/ Ruby 2.1.3 and Rails 4.2.4
 ---
+#[BearHug Repo](https://github.com/organicrails/Bearhug)
 
 As school is starting back up again, it doesn't seem like I'll have time to write the usual full-length walkthroughs in a single take with ease. In the future, I think I'll start breaking future walkthroughs down into different parts. Each parts will still be a complete project by itself, but with each additional parts I'll experiment and build more on top of the original project. With that said, let this be the first of many parts in which I experiment with the Stripe API. 
 
