Fixed up Bearhug Post

--- a/_posts/2015-09-07-Bearhug.md
+++ b/_posts/2015-09-07-Bearhug.md
@@ -9,7 +9,7 @@ As school is starting back up again, it doesn't seem like I'll have time to writ
 
 Whenever I face a massive amount of Computer Science assignments that I put off till the very last minute, I always wish that a gigantic furry bear would just appear out of no where and embrace me. Unfortunately, no such service exists right now, so I've decided to tap into my inner entrepreneur and create one for the world. **With BearHugs, users can select how many hugs they would like to receive from the bears. All the transactions will be handled through Stripe.**
 
-The sooner I finish, the sooner I can start receiving hugs from bears. Let's get started.
+The sooner I finish, the sooner I can start receiving hugs from the bears, so let's get started.
 
 ### What is Stripe?
 
@@ -25,7 +25,9 @@ Once you log in, you should be presented with your dashboard. First we need to f
 
 ### Shall We Begin
 
-Open up your favorite text editor, fire up the terminal, and create an app called **BearHugs**. Of course, if you'd like to receive embraces from other types of creatures, that is entirely up to you. Let's take a look at the gems we'll be adding in this project. 
+Open up your favorite text editor, fire up the terminal, and create an app called **BearHugs**. Of course, if you'd like to receive embraces from other types of creatures, that is entirely up to you. 
+
+Let's take a look at the gems we'll be adding in this project. 
 
 **_GEMFILE_**
 
@@ -77,7 +79,7 @@ The second part is crucial in that this is how your application is "talking" to 
 
 Both parts are required in order for Stripe to function within the app. 
 
-### Creating a Huggable Model. 
+### Creating a Huggable Model
 
 Now that we get the configuration out of the way, let's start by thinking what we need in our huggable service. To start, each "package" of hugs should contain at least a name, a description, and pricing. Let's create a Hug model based on those three field.
 
@@ -104,8 +106,8 @@ end
 
 Now run `rake db:migrate` and you're all set!
 
-### Adding some Huggable Plans 
-Because we don't need any user interactions with adding/deleting the plans, we can simply fire up the rails console and add plans in there. Note that as oppose to the traditional method of creating a controller and adding the model objects through the views, this method is incredibly faster. 
+### Adding some Huggable Packages
+Because we don't need users to add or delete the packages, we can simply fire up the rails console and add the packages in there. Note that as oppose to the traditional method of creating a controller and adding the model objects through the views, this method is incredibly faster. 
 
 Open up the rails console by calling `rails c` in your command line.
 
@@ -131,9 +133,9 @@ Great, seems like right now it is empty as expected. Let's add our first package
  => true 
 {% endhighlight %}
 
-And just like that, our first huggable object is saved into our database. 
+And just like that, our first huggable package is saved into our database. 
 
-Let's create more packages. You are free to play around however you'd like, but here are my personal packages.
+Let's create more packages. Feel free to play around, but here are my personal packages.
 
 `Name: Simply a Hug | Description: Have a Bear show up at your desired location and give you a hug! | Price: 10.00 `
 
@@ -143,7 +145,7 @@ Let's create more packages. You are free to play around however you'd like, but 
 
 `Name: LOTS OF HUGS | Description: Have TEN BEARS show up at your desired locations and give you a hug! Safety not Guaranteed. Must Sign Additional Contract. Price Includes Partial Medical Fees | Price: 99.50`
 
-After creating however many package you desire, let's move onto the controller and the views.
+After creating and saving however many package you desire, let's move onto the controller and the views.
 
 ### The Huggable Controller 
 
@@ -182,19 +184,21 @@ end
   = @hug.price
 {% endhighlight %}
 
-Simple and without Styling, feel free to add your own styling though!
+Simple and without Styling. Feel free to add your own styling though!
 
 ### Creating the Huggable Orders
 
-Now that we have our "shop" set up, let's create a form that will allow the users to order the bear packages they want. Within the form, we'll use the Stripe's _Checkout.js_ to automatically deal with all the transactions for us. Furthermore, I'd like to make a shout out to Stripe Engineer **coopf** for helping me out on FreeNode. This section took me an embarrassingly amount of time to figure out, and I probably couldn't have done it without the help of **coopf**. 
+Now that we have our "shop" set up, let's create a form that will allow the users to order the bear packages they want. Within the form, we'll use the Stripe's _Checkout.js_ to automatically deal with all the transactions for us. 
 
-The code below is partially reproduced from [this blog](http://www.gotealeaf.com/blog/stripe-checkout). The reason this part took me forever is because I couldn't understand the logic behind the code from the blog. Instead of mindlessly copying, I had to go through the their github repo and tear apart the code base line by line. 
+Furthermore, I'd like to make a shout out to Stripe Engineer **coopf** for helping me out on FreeNode. This section took me an embarrassingly amount of time to figure out, and I probably couldn't have done it without the help of **coopf**. 
+
+The code below is partially reproduced from [this blog](http://www.gotealeaf.com/blog/stripe-checkout). The reason this part took me forever is because I couldn't understand the logic behind some of the code from the blog. Instead of mindlessly copying, I had to go through the their github repo and tear apart the code base line by line. 
 
 Now, allow me to explain what the code is doing. 
 
 ### Good Old Controller, Model, and Views. 
 
-With that said, let's proceed with making the controller and model for Order. What do we want form a customer who's placing an order? Probably the name and email. There can be a lot more fields, but let's stick with those two only for simplicity sake. Furthermore, remember that each order belongs to a specific Huggable Package, so also toss in the reference. 
+With that said, let's proceed with making the controller and model for Order. What do we want form a customer who's placing an order? Probably the name and email. There can be a lot more fields, but let's stick with those two only for simplicity's sake. Furthermore, remember that each order belongs to a specific Huggable Package, so also toss in the references. 
 
 ` rails g model Order name:string email:string hug:references`
 
@@ -242,9 +246,9 @@ Now let's take a look at how we're going to code the new page
 
 All very standard. We have an additional `= f.hidden_field :hug_id, value: @hug.id` because once again we'd like to use the information from each hug later. 
 
-You may notice the script on the bottom. This script is actually Stripe's [Checkout.js](https://stripe.com/docs/checkout), a beautifully designed payment form. This form not only deals with credit card payment, but also payment error handling. With minimal modification, we can have a fully functional payment button with each. 
+You may notice the script on the bottom. This script is actually Stripe's [Checkout.js](https://stripe.com/docs/checkout), a beautifully designed payment form. This form not only deals with credit card payment, but also payment error handling. With minimal modification, we already have a fully functional payment button with ease. 
 
-Note that the `@hug.price*100` is not the price that will be transmitted through the Stripe Servers. This line of code merely dictates what numbers are shown on the form, and we'll see the data transmission code later. 
+Note that the `@hug.price*100` is not the price that will be transmitted through the Stripe Servers. This line of code merely dictates what numbers are shown on the form. We will see the data transmission code later. 
 
 Now, onto the controller
 
@@ -352,13 +356,13 @@ Since Stripe deals in cents, we just have to multiply whatever the price is by 1
 
 ### Finishing Up
 
-Great! Now head back to the hugs index page. Select your desired huggable package. Click "Order Now". Enter all the information and press that lovely Stripe Button. Enter a test email, 4242-4242-4242-4242 as your test credit card number, make up some expiration date and CSV, and pay!
+Great! Now head back to the hugs index **(@ localhost:3000/hugs)** page. Select your desired huggable package. Click "Order Now". Enter all the information and press that lovely Stripe Button. Enter a test email, 4242-4242-4242-4242 as your test credit card number, make up some expiration date and CSV, and Viola, there is an error.
 
-Now, you should be redirected to a template is missing error page. I believe it is under **_views/orders/create.html.haml_**. I am not sure why the path is the way it is (probably has to do with Stripe), but just make a simple thank you page at that directory. 
+You should be redirected to a template is missing error page. I believe it is under **_views/orders/create.html.haml_**. I am not sure why the path is the way it is (probably has to do with Stripe), but just make a simple thank you page at that directory. 
 
 Now try the entire process again!!
 
-If your transaction is successful (which it should), you should see a green check mark on the Stripe.js form and be redirected to the newly created thank you page. To make sure that your charge did indeed go through, go back to your [Stripe Test Dashboard](https://dashboard.stripe.com/test/dashboard) and verify the charge actually went through!
+If your transaction is successful (and it should), you should see a green check mark on the Stripe.js form and be redirected to the newly created thank you page. To make sure that your charge did indeed go through, go back to your [Stripe Test Dashboard](https://dashboard.stripe.com/test/dashboard) and verify the charge actually went through!
 
 Feel free to experiment more with the Stripe Dashboard, as it is incredibly user-friendly. As for me, I'll be ending this walkthrough right here. Hope you enjoyed it! See you next time.
 
